security/opa/gatekeeper/constraints/require-namespace-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-namespace-labels
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Namespace
  parameters:
    labels:
      - owner
      - environment
