security/opa/gatekeeper/constraints/require-workload-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-workload-resources
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    namespaces:
      - dev
